<resources>
    <string name="app_name">Best Guess?</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">567505990294738</string>
    <string name="fb_login_protocol_scheme">fb567505990294738</string>
    <string name="host_game">Host Game</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="login">Login</string>
    <string name="game_password">Enter the Game ID</string>
    <string name="game_id">Game ID:</string>
    <string name="start_game">Start Game!</string>
    <string name="join_game">Join Game</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="update_account">Update Account</string>
    <string name="return_home">Return Home</string>
    <string name="logout">Logout</string>
    <string name="answer_hint">Enter Answer</string>
    <string name="submit">Submit</string>
    <string name="enter_lobby">Enter Lobby</string>
</resources>
