<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundDark"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="35dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/currentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/change_username"
                android:inputType="text"
                android:textColor="@color/cardview_light_background"
                android:textColorLink="@color/primaryRed"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/currentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/change_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/cardview_light_background"
                android:textColorLink="@color/primaryRed"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/change_password"
                android:inputType="textPassword"
                android:textColor="@color/cardview_light_background"
                android:textColorLink="@color/primaryRed"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/reenter_password"
                android:inputType="textPassword"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
                android:textColor="@color/cardview_light_background"
                android:textColorLink="@color/primaryRed"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/architects_daughter"
            android:padding="12dp"
            android:text="@string/update_account"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>