<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context="com.masonsrussell.bestguess.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/gameIDEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/architects_daughter"
                    android:hint="@string/game_password"
                    android:inputType="text"
                    android:textColor="@color/cardview_light_background"
                    android:textColorLink="@color/primaryRed"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/joinGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="@font/architects_daughter"
                android:padding="12dp"
                android:text="@string/enter_lobby"
                android:textColor="@color/cardview_light_background"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/returnHomeButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/architects_daughter"
                android:gravity="center"
                android:text="@string/return_home"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
